--- a/deviations/templates/deviations/add_dl.html
+++ b/deviations/templates/deviations/add_dl.html
@@ -19,6 +19,9 @@
 		<legend>{% translate "ADD_DEADLINE_DEVIATIONS" %}</legend>
 		{{ form|bootstrap_horizontal }}
 		<div class="form-group">
+			<input type="hidden" id="timezone_string" name="timezone_string" value="">
+		</div>
+		<div class="form-group">
 			<div class="col-sm-10 col-sm-offset-2">
 				<button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
 				<a href="{{ cancel_action }}" class="aplus-button--secondary aplus-button--md" role="button">{% translate "CANCEL" %}</a>
@@ -26,4 +29,11 @@
 		</div>
 	</form>
 </div>
+
+<script>
+	// Get the user's timezone
+	const timezoneString = Intl.DateTimeFormat().resolvedOptions().timeZone;
+	// Set the hidden input field value to the timezone string
+	document.getElementById('timezone_string').value = timezoneString;
+</script>
 {% endblock %}
