--- a/news/templates/news/user_news.html
+++ b/news/templates/news/user_news.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load news %}
-
+{% load course %}
 
 {% if news %}
 	<div class="panel panel-primary news-panel">
@@ -8,41 +8,41 @@
 			<h3 class="panel-title">{% translate "COURSE_NEWS" %}</h3>
 		</div>
 		<div class="list-group">
-			{% for item in news %}
-				<div class="{% if item.pin %}pinned-{% endif %}list-group-item">
-					{% if item.pin %}
-						<span class="sr-only">{% translate "NEWS_ITEM_PINNED_SR_TEXT" %}</span>
-					{% endif %}
-					<div class="list-group-item-heading">
-						<h4 class="list-group-item-title">
-							{{ item.title|safe }}
-						</h4>
-						<div class="list-group-item-details">
-							{% if not item|is_published:now %}
-								<span class="future-instance">{% translate "PUBLISHED_ON" %}: <time>{{ item.publish }}</time></span>
-							{% else %}
-								<time class="current-instance">{{ item.publish }}</time>
-							{% endif %}
-							{% if is_course_staff %}
-								<span class="label label-primary">{{ item.audience|news_audience }}</span>
-							{% endif %}
-							{% if item.pin %}
-								<span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span>
-							{% endif %}
+			{% for item in language_news %}
+					<div class="{% if item.pin %}pinned-{% endif %}list-group-item">
+						{% if item.pin %}
+							<span class="sr-only">{% translate "NEWS_ITEM_PINNED_SR_TEXT" %}</span>
+						{% endif %}
+						<div class="list-group-item-heading">
+							<h4 class="list-group-item-title">
+								{{ item.title|safe }}
+							</h4>
+							<div class="list-group-item-details">
+								{% if not item|is_published:now %}
+									<span class="future-instance">{% translate "PUBLISHED_ON" %}: <time>{{ item.publish }}</time></span>
+								{% else %}
+									<time class="current-instance">{{ item.publish }}</time>
+								{% endif %}
+								{% if is_course_staff %}
+									<span class="label label-primary">{{ item.audience|news_audience }}</span>
+								{% endif %}
+								{% if item.pin %}
+									<span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span>
+								{% endif %}
+							</div>
 						</div>
+						<p class="list-group-item-text">
+							{{ item.body|safe }}
+						</p>
 					</div>
-					<p class="list-group-item-text">
-						{{ item.body|safe }}
-					</p>
-				</div>
 				{# If a limit for folding news (more) is set, this creates the folding section #}
-				{% if forloop.counter == more and news|length > more and more > 0 %}
+				{% if forloop.counter == more and language_news|length > more and more > 0 %}
 					<a class="folding-list-group-item collapsed" href="#more-news" data-toggle="collapse" role="button" aria-controls="more-news" aria-expanded="false">
 						{% translate "SHOW_OLDER" %} <span class="caret"></span>
 					</a>
 					<div class="collapse" id="more-news">{# start of collapse.div #}
 				{% endif %}
-				{% if forloop.last and news|length > more and more > 0 %}
+				{% if forloop.last and language_news|length > more and more > 0 %}
 					</div>{# end of collapse.div #}
 				{% endif %}
 			{% endfor %}
