--- a/edit_course/templates/edit_course/edit_gitmanager.html
+++ b/edit_course/templates/edit_course/edit_gitmanager.html
@@ -21,6 +21,9 @@
     <button type="submit" class="aplus-button--default aplus-button--md">
         {% translate "SUBMIT" %}
     </button>
+    <a class="aplus-button aplus-button--md" role="button" value="{{GITMANAGER_URL}}" href="" id="gitmanager-link"> {% csrf_token %}
+        {% translate "GO_TO_GITMANAGER_PAGE" %}
+    </a>
     <div class="hidden progress">
       <div class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%;">
         {% translate "UPDATING_GITMANAGER" %}
@@ -31,12 +34,59 @@
 
 {% block scripts %}
 {{ block.super }}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.min.js"></script>
 <script>
 $(function() {
     var form = $("#gitmanager-form");
     form.on("submit", function(event) {
         form.find('[type="submit"]').attr("disabled", true);
         form.find('.progress').removeClass("hidden");
+    });
+});
+
+$(function() {
+    $("#gitmanager-link").on("click", async function(event) {
+        event.preventDefault();
+
+        const course_id = document.getElementById('id_remote_id').value;
+
+        console.log(course_id)
+
+        const csrftoken = Cookies.get('csrftoken');
+        var data = {
+            "taud": "gitmanager",
+            "exp": "01:00:00",
+            "permissions": [
+                ["instance", 1, {"id": course_id}],
+                ["instance", 2, {"id": course_id}]
+            ]
+        };
+
+        var jsonData = JSON.stringify(data);
+
+        const response = await fetch('/api/v2/get-token/', {
+            method: 'POST',
+            headers: {'X-CSRFToken': csrftoken,
+                      'Content-type': 'application/json'
+            },
+            body: jsonData
+        });
+
+        var resp_data = await response.json();
+
+        var gitman_url = String("{{GITMANAGER_URL}}");
+
+		const gitman_auth_post = await fetch(gitman_url + "/login", {
+            method: 'POST',
+		    credentials: 'include',
+            headers: {'Authorization': 'Bearer ' + resp_data,
+            },
+        });
+
+		var gitman_auth_post_data = await gitman_auth_post;
+
+        window.location = gitman_url;
+
     });
 });
 </script>
