--- a/exercise/templates/exercise/_submission_info.html
+++ b/exercise/templates/exercise/_submission_info.html
@@ -44,7 +44,7 @@
 					  {{ submission.submitters.all|names }}
 				  {% endif %}
 			  {% else %}
-				Somebody
+				{% translate "PSEUDONYMIZED_SUBMITTERS" %}
 			  {% endif %}
 			</dd>
 		</dl>
