--- a/edit_course/templates/edit_course/edit_gitmanager.html
+++ b/edit_course/templates/edit_course/edit_gitmanager.html
@@ -14,6 +14,9 @@
 <form id="gitmanager-form" method="post" class="well">
     {% csrf_token %}
     <legend>{% translate "EDIT_GITMANAGER" %}</legend>
+    <a style="float: right" role="button" value="{{ gitmanager_url }}" href="javascript:;" id="gitmanager-link">
+        {% translate "OPEN_IN_GITMANAGER" %}
+    </a>
     <p>
         {% translate "EDIT_GITMANAGER_DESCRIPTION" %}
     </p>
@@ -37,6 +40,44 @@ $(function() {
     form.on("submit", function(event) {
         form.find('[type="submit"]').attr("disabled", true);
         form.find('.progress').removeClass("hidden");
+    });
+
+    $("#gitmanager-link").on("click", async function(event) {
+        event.preventDefault();
+
+        // Fetch gitmanager access token
+        const course_id = document.getElementById('id_remote_id').value;
+        const data = JSON.stringify({
+            "taud": "gitmanager",
+            "exp": "01:00:00",
+            "permissions": [
+                ["instance", 1, {"id": course_id}],
+                ["instance", 2, {"id": course_id}]
+            ]
+        });
+        const response = await fetch('/api/v2/get-token/', {
+            method: 'POST',
+            headers: {
+                'Content-type': 'application/json',
+                'X-CSRFToken': '{{ csrf_token }}'
+            },
+            body: data
+        });
+        const token = await response.json();
+
+        // Login to gitmanager using generated access token
+        const gitmanager_url = "{{ gitmanager_url }}";
+        await fetch(gitmanager_url + "/login", {
+            method: 'POST',
+            credentials: 'include',
+            headers: {
+                'Authorization': 'Bearer ' + token,
+            },
+        });
+
+        // Navigate to gitmanager, now logged in
+        window.location = gitmanager_url;
+
     });
 });
 </script>
