Add submission tags

--- a/edit_course/templates/edit_course/edit_course_base.html
+++ b/edit_course/templates/edit_course/edit_course_base.html
@@ -54,6 +54,11 @@
                 {% translate "TAGS" %}
             </a>
         </li>
+		<li role="presentation" class="menu-course-submission-tags">
+            <a href="{{ instance|url:'course-submission-tags' }}">
+                {% translate "SUBMISSION_TAGS" %}
+            </a>
+        </li>
         <li role="presentation" class="menu-batch-assess">
             <a href="{{ instance|url:'batch-assess' }}">
                 {% translate "BATCH_ASSESS" %}
