--- a/templates/base.html
+++ b/templates/base.html
@@ -156,7 +156,7 @@
 							<li role="presentation" class="profile-menu dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">
-									<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+									<span class="glyphicon glyphicon-user" aria-hidden="true" data-testid="user-menu"></span>
 									{{ user.first_name }} {{ user.last_name }} <span class="caret"></span>
 								</a>
 								<ul class="dropdown-menu">
