Get started with Bootstrap 5 upgrade

--- a/exercise/templates/exercise/_points_progress.html
+++ b/exercise/templates/exercise/_points_progress.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% if not feedback_revealed %}
 <p class="small">
-	<i class="glyphicon glyphicon-info-sign"></i>
+	<i class="bi-info-sign"></i>
 	{% translate "RESULTS_OF_SOME_ASSIGNMENTS_ARE_CURRENTLY_HIDDEN" %}
 </p>
 {% endif %}
