--- a/exercise/templates/exercise/staff/_submissions_table.html
+++ b/exercise/templates/exercise/staff/_submissions_table.html
@@ -5,7 +5,7 @@
 {% load colortag %}
 
 <div class="clearfix">
-	<div class="pull-right">
+	<div class="float-end">
 		{% if allow_regrade %}
 			<button type="button" class="aplus-button--secondary aplus-button--xs" data-toggle="modal" data-target="#regrade-modal">
 				{{ regrade_button }}
@@ -13,11 +13,11 @@
 		{% endif %}
 
 		<a class="aplus-button--secondary aplus-button--xs" href="{{ exercise|url:'submission-next-unassessed' }}">
-			<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+			<i class="bi-ok" aria-hidden="true"></i>
 			{% translate "START_MANUAL_ASSESSMENT" %}
 		</a>
 		<a class="aplus-button--secondary aplus-button--xs" href="{{ exercise|url:'submission-summary' }}">
-			<span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
+			<i class="bi-bar-chart-fill" aria-hidden="true"></i>
 			{% translate "SUMMARY" %}
 		</a>
 		<span class="dropdown">
@@ -27,7 +27,7 @@
 				data-toggle="dropdown"
 				id="download-data"
 			>
-				{% translate "DOWNLOAD" %} <span class="caret"></span>
+				{% translate "DOWNLOAD" %} 
 			</button>
 			<ul class="dropdown-menu dropdown-menu-right" aria-labeledby="download-data">
 				{% get_format_info_list "json csv excel.csv" as formats %}
@@ -65,7 +65,7 @@
 	<small>{% trans "FILTER_SUBMISSIONS_BY_TAG" %}:</small>
 	{% for tag in instance.submissiontags.all %}
 	<button class="btn btn-default btn-xs filter-tag" style="background-color:{{ tag.color }};color:{{ tag.font_color }};" data-tagslug="{{ tag.slug }};" data-status="{{ tag.status }}">
-		<span class="glyphicon glyphicon-unchecked" aria-hidden="true"></span>
+		<i class="bi-square" aria-hidden="true"></i>
 		{{ tag.name }}
 	</button>
 	{% endfor %}
@@ -117,16 +117,16 @@
 						</td>
 						<td>
 								{% if submission.grader %}
-										<span class="glyphicon glyphicon-ok"></span>
+										<i class="bi-ok"></i>
 										{% translate "YES" %}
 								{% else %}
-										<span class="glyphicon glyphicon-remove"></span>
+										<i class="bi-remove"></i>
 										{% translate "NO" %}
 								{% endif %}
 						</td>
 						<td>
 								<a href="{{ submission|url:'submission-inspect' }}" class="aplus-button--secondary aplus-button--xs">
-										<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+										<i class="bi-zoom-in" aria-hidden="true"></i>
 										{% translate "INSPECT" %}
 								</a>
 						</td>
