--- a/exercise/templates/exercise/staff/_submissions_table_compact.html
+++ b/exercise/templates/exercise/staff/_submissions_table_compact.html
@@ -64,7 +64,7 @@
 					>{% translate 'FINAL' %}</span>
 					{% else %}
 					<span
-						class="glyphicon glyphicon-star"
+						class="bi-star"
 						data-toggle="tooltip"
 						title="{% translate 'SUBMISSION_CHOSEN_TOOLTIP' %}"
 					></span>
