--- a/exercise/templates/exercise/staff/inspect_submission.html
+++ b/exercise/templates/exercise/staff/inspect_submission.html
@@ -56,7 +56,7 @@
 		<div class="col-md-9">
 			<div>
 				{% with prev_id=submission.submitters.all.0.id %}
-				<a href="{{ exercise|url:'submission-next-unassessed' }}?prev={{ prev_id }}" class="pull-right">
+				<a href="{{ exercise|url:'submission-next-unassessed' }}?prev={{ prev_id }}" class="float-end">
 					{% translate "ASSESS_NEXT_SUBMITTER_MANUALLY" %}
 					{{ request.session.manually_assessed_counter }}
 					<span aria-hidden="true">&raquo;</span>
