--- a/templates/base.html
+++ b/templates/base.html
@@ -25,14 +25,16 @@
 			integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
 			crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-	<script src="{% static 'js/bootstrap3.min.js' %}"></script>
+	<script src="{% static 'js/popper.min.js' %}"></script>
+	<script src="{% static 'js/bootstrap5.min.js' %}"></script>
 
-	<link href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css" rel="stylesheet"
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+	<!--<link href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css" rel="stylesheet"
 			integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE"
 			crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link href="https://use.fontawesome.com/releases/v5.15.4/css/regular.css" rel="stylesheet"
 			integrity="sha384-e7wK18mMVsIpE/BDLrCQ99c7gROAxr9czDzslePcAHgCLGCRidxq1mrNCLVF2oaj"
-			crossorigin="anonymous" referrerpolicy="no-referrer" />
+			crossorigin="anonymous" referrerpolicy="no-referrer" />-->
 
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" rel="stylesheet"
 			integrity="sha512-0aPQyyeZrWj9sCA46UlmWgKOP0mUipLQ6OZXu8l4IcAmD2u31EPEy9VcIMvl7SoAaKe8bLXZhYoMaE/in+gcgA=="
@@ -113,15 +115,14 @@
 	<div class="page-wrap">
 		{% block header %}
 		<header>
-			<nav class="topbar navbar navbar-inverse navbar-static-top" aria-label="{% translate 'MAIN' %}">
+			<nav class="topbar navbar sticky-top visible-xs" aria-label="{% translate 'MAIN' %}">
 				<div class="container-fluid">
-					<div class="navbar-header">
+					<div style="display: flex; max-width: 500px">
 						<a class="navbar-brand" href="{% url 'home' %}">{% brand_name %}</a>
-						<p class="navbar-text">{{ APLUS_VERSION }}</p>
-						<ul class="nav navbar-dropdown">
-							<li role="separator" class="divider"></li>
-							<li role="presentation" class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+						<span class="navbar-brand">{{ APLUS_VERSION }}</span>
+						<ul class="navbar-dropdown">
+							<li role="presentation" class="nav-item dropdown">
+								<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">
 									{% if instance %}
 									{{ course|parse_localization }}
@@ -131,59 +132,56 @@
 									{% else %}
 									{% translate "SELECT_COURSE" %}
 									{% endif %}
-									<span class="caret"></span>
+									
 								</a>
 								{% course_menu %}
 							</li>
 						</ul>
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-							data-target="#bs-navbar-collapse" aria-expanded="false">
-							<span class="sr-only">{% translate "TOGGLE_NAVIGATION" %}</span>
-							{% notification_count as n_count %}
-							{% if n_count > 0 %}
-							<span class="badge badge-danger pull-right">{{ n_count }}</span>
-							{% endif %}
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
 					</div>
+					<ul class="navbar-dropdown user-menu d-none d-sm-block">
+						{% if user.is_authenticated %}
+						{% group_select %}
+						{% notification_menu %}
+						<li role="presentation" class="profile-menu nav-item dropdown">
+							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
+								aria-haspopup="true" aria-expanded="false">
+								<i class="bi-person-fill" aria-hidden="true"></i>
+								{{ user.first_name }} {{ user.last_name }} 
+							</a>
+							<ul class="dropdown-menu">
+								<li role="presentation">
+									<a class="nav-link" href="{% url 'profile' %}">{% translate "PROFILE" %}</a>
+								</li>
+								<li role="separator" class="divider"></li>
+								<li role="presentation">
+									<a class="nav-link" href="{% url 'logout' %}">
+										<i class="bi-caret-left-fill" aria-hidden="true"></i>
+										{% translate "LOG_OUT"%}
+									</a>
+								</li>
+							</ul>
+						</li>
+						{% else %}
+						<li role="presentation">
+							<a href="{% url 'login' %}{% login_next %}">
+								<i class="bi-box-arrow-in-right" aria-hidden="true"></i>
+								{% translate "LOG_IN"%}
+							</a>
+						</li>
+						{% endif %}
+					</ul>
+					<button type="button" class="navbar-toggler collapsed d-block d-sm-none" data-bs-toggle="collapse"
+						data-bs-target="#bs-navbar-collapse" aria-expanded="false">
+						<span class="visually-hidden">{% translate "TOGGLE_NAVIGATION" %}</span>
+						{% notification_count as n_count %}
+						{% if n_count > 0 %}
+						<span class="badge badge-danger float-end">{{ n_count }}</span>
+						{% endif %}
+					</button>
 					<div class="collapse navbar-collapse" id="bs-navbar-collapse">
-						<ul class="user-menu nav navbar-nav navbar-right hidden-xs">
-							{% if user.is_authenticated %}
-							{% group_select %}
-							{% notification_menu %}
-							<li role="presentation" class="profile-menu dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-									aria-haspopup="true" aria-expanded="false">
-									<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-									{{ user.first_name }} {{ user.last_name }} <span class="caret"></span>
-								</a>
-								<ul class="dropdown-menu">
-									<li role="presentation">
-										<a href="{% url 'profile' %}">{% translate "PROFILE" %}</a>
-									</li>
-									<li role="separator" class="divider"></li>
-									<li role="presentation">
-										<a href="{% url 'logout' %}">
-											<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-											{% translate "LOG_OUT"%}
-										</a>
-									</li>
-								</ul>
-							</li>
-							{% else %}
-							<li role="presentation">
-								<a href="{% url 'login' %}{% login_next %}">
-									<span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
-									{% translate "LOG_IN"%}
-								</a>
-							</li>
-							{% endif %}
-						</ul>
 
 						{# Separate menu optimized for mobile users #}
-						<ul class="nav navbar-nav visible-xs">
+						<ul class="nav navbar-nav d-block d-sm-none">
 							{% notification_count as n_count %}
 							{% if n_count > 0 %}
 								<li class="header">
@@ -197,29 +195,29 @@
 								<h4>{% translate "SITE" %}</h4>
 							</li>
 							<li>
-								<a href="{% url 'home' %}">
-									<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+								<a class="nav-link" href="{% url 'home' %}">
+									<i class="bi-house-door-fill" aria-hidden="true"></i>
 									{% translate "HOME" %}
 								</a>
 							</li>
 							{% course_menu %}
 							{% if user.is_authenticated %}
-							<li>
-								<a href="{% url 'profile' %}">
-									<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+							<li class="nav-item">
+								<a class="nav-link" href="{% url 'profile' %}">
+									<i class="bi-user" aria-hidden="true"></i>
 									{{ user.first_name }} {{ user.last_name }}
 								</a>
 							</li>
-							<li>
-								<a href="{% url 'logout' %}">
-									<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+							<li class="nav-item">
+								<a class="nav-link" href="{% url 'logout' %}">
+									<i class="bi-caret-left" aria-hidden="true"></i>
 									{% translate "LOG_OUT"%}
 								</a>
 							</li>
 							{% else %}
-							<li>
-								<a href="{% url 'login' %}{% login_next %}">
-									<span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
+							<li class="nav-item">
+								<a class="nav-link" href="{% url 'login' %}{% login_next %}">
+									<i class="bi-box-arrow-in-right" aria-hidden="true"></i>
 									{% translate "LOG_IN" %}
 								</a>
 							</li>
@@ -246,19 +244,19 @@
 		{% endblock %}
 
 		{% block footer %}
-		<footer role="contentinfo">
-			<div class="site-footer navbar navbar-default navbar-fixed-bottom" role="presentation">
+		<footer class="footer mt-auto" role="contentinfo">
+			<nav class="navbar navbar-expand sticky-bottom bg-body-tertiary" role="presentation">
 				<div class="container-fluid">
 					<ul class="nav navbar-nav">
 						{% block footercontent %}{% endblock %}
-						<li><a href="{% url 'privacy_notice' %}">{% translate "PRIVACY_NOTICE" %}</a></li>
-						<li><a href="{% url 'accessibility_statement' %}">{% translate "ACCESSIBILITY_STATEMENT" %}</a></li>
-						<li><a href="{% url 'support_channels' %}">{% translate "SUPPORT" %}</a></li>
-						<li><a href="https://link.webropol.com/s/aplus-feedback" target="_blank">{% translate "FEEDBACK" %}</a></li>
-						<li><p class="navbar-text">{% brand_name %} {{ APLUS_VERSION }}</p></li>
+						<li class="nav-item"><a class="nav-link" href="{% url 'privacy_notice' %}">{% translate "PRIVACY_NOTICE" %}</a></li>
+						<li class="nav-item"><a class="nav-link" href="{% url 'accessibility_statement' %}">{% translate "ACCESSIBILITY_STATEMENT" %}</a></li>
+						<li class="nav-item"><a class="nav-link" href="{% url 'support_channels' %}">{% translate "SUPPORT" %}</a></li>
+						<li class="nav-item"><a class="nav-link" href="https://link.webropol.com/s/aplus-feedback" target="_blank">{% translate "FEEDBACK" %}</a></li>
+						<li class="nav-item"><p class="navbar-text">{% brand_name %} {{ APLUS_VERSION }}</p></li>
 					</ul>
 				</div>
-			</div>
+			</nav>
 		</footer>
 		{% endblock %}
 	</div>
